refactor(schedule): 更新类型

--- a/react/package.json
+++ b/react/package.json
@@ -13,6 +13,7 @@
   "author": "mrtujiawei",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^17.0.38",
     "typescript": "^4.7.2"
   }
 }
