--- a/react/package.json
+++ b/react/package.json
@@ -13,6 +13,9 @@
   "author": "mrtujiawei",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^28.1.1",
+    "jest": "^28.1.0",
+    "ts-jest": "^28.0.4",
     "typescript": "^4.7.2"
   }
 }
